<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystickView"
        android:layout_width="241dp"
        android:layout_height="268dp"
        android:layout_marginStart="84dp"
        app:JV_backgroundColor="#40B5C6C5"
        app:JV_borderColor="#2200796B"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="#FF6E40"
        app:JV_buttonSizeRatio="30%"
        app:JV_fixedCenter="false"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="71dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/openconnection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/openconnection_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/btStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btStatusTextDefault"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openconnection_button" />

    <fragment
        android:id="@+id/lightsfragment"
        android:name="shanksi.legonxtapplication.LightsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_lights" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="409dp"
        android:layout_height="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/batteryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/batteryIndicatorLabelText" />

            <TextView
                android:id="@+id/batteryIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indicatorDefaultValue" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distanceIndicatorLabelText" />

            <TextView
                android:id="@+id/distanceIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indicatorDefaultValue" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>